# my_household_mcpserver

./: .coverage  .dockerignore  .env.example  .gitignore  .markdownlint.yml  .markdownlintrc.json  .pre-commit-config.yaml  .secrets.baseline  DEMO_SCENARIOS.md  Makefile  PROGRESS.md  PROJECT_COMPLETION_SUMMARY.md  README.md  REFACTORING.md  TEST_PREVENTION_GUIDE.md  UAT_CHECKLIST.md  coverage.xml  design.md  design_phase16.md  docker-compose.yml  pull_request.md  pyproject.toml  requirements-dev.txt  requirements.md  requirements.txt  setup.cfg  tasks.md  test_server.py  設計仕様書.md
.github/: copilot-instructions.md
.learning_support/: README.md  changelog_helper.py  full_learning_check.py  learning_path_generator.py  review_scheduler.py  tdd_tracker.py  understanding_checker.py
backend/: Dockerfile  README.md  pyproject.toml  pytest.ini
backend/scripts/: init_database.py  migrate_fi_tables.py
backend/src/: server.py
backend/src/household_mcp/: __init__.py  budget_analyzer.py  dataloader.py  dataloader_compat.py  exceptions.py  logging_config.py  mcp_server.py  resources.py  server.py
backend/src/household_mcp/analysis/: __init__.py  enhanced_fire_simulator.py  expense_classifier.py  expense_pattern_analyzer.py  financial_independence.py  fire_calculator.py  income_analyzer.py  real_estate_cashflow_analyzer.py  savings_rate_calculator.py  scenario_simulator.py  trend_statistics.py  trends.py
backend/src/household_mcp/assets/: manager.py  models.py
backend/src/household_mcp/config/: income_categories.json  property_database.json
backend/src/household_mcp/database/: __init__.py  connection.py  csv_importer.py  manager.py  migrations.py  models.py  query_helpers.py  query_optimization.py  transaction_manager.py
backend/src/household_mcp/duplicate/: __init__.py  detector.py  service.py
backend/src/household_mcp/models/: account.py  budget.py  category.py  metric.py  transaction.py
backend/src/household_mcp/server/: __init__.py  __main__.py
backend/src/household_mcp/services/: csv_loader.py  fire_snapshot.py
backend/src/household_mcp/streaming/: __init__.py  cache.py  global_cache.py  image_streamer.py
backend/src/household_mcp/tools/: __init__.py  analysis_tools.py  analytics_tools.py  budget_tools.py  data_tools.py  duplicate_tools.py  enhanced_tools.py  financial_independence_tools.py  phase16_tools.py  report_tools.py  trend_tool.py  trend_tool_db.py
backend/src/household_mcp/utils/: __init__.py  formatters.py  query_parser.py  validators.py
backend/src/household_mcp/visualization/: __init__.py  bar_chart.py  base.py  chart_generator.py  line_chart.py  pie_chart.py  styles.py
backend/src/household_mcp/web/: __init__.py  errors.py  http_server.py
backend/src/household_mcp/web/routes/: __init__.py  assets.py  chart_routes.py  core_routes.py  duplicate_routes.py  financial_independence.py  income_analysis_routes.py  monthly_routes.py  transactions.py  trend_routes.py
backend/tests/: conftest.py  test_account.py  test_analytics_tools.py  test_asset_crud.py  test_budget_tools.py  test_chart_generator_smoke.py  test_dataloader_compat.py  test_duplicate_tools.py  test_expense_pattern_analyzer.py  test_financial_independence_tools.py  test_fire_calculator.py  test_fire_snapshot_csv.py  test_metric.py  test_phase14_integration.py  test_phase15_e2e_integration.py  test_phase15_mcp_integration.py  test_query_optimization.py  test_report_tools.py  test_scenario_simulator.py  test_server_resources.py  test_server_smoke.py  test_transaction.py  test_transaction_crud.py  test_transaction_manager.py  test_trend_integration.py  test_trend_tools_db.py
backend/tests/e2e/: __init__.py  conftest.py  test_fi_dashboard.py
backend/tests/integration/: test_asset_crud.py  test_asset_crud_simple.py  test_assets_api.py  test_assets_api_integration.py  test_category_analysis_integration.py  test_duplicate_server_tools.py  test_duplicate_workflow.py  test_fi_api.py  test_fi_mcp_tools.py  test_fire_csv_integration.py  test_fire_scenarios_api.py  test_fire_snapshot_csv.py  test_http_server_endpoints.py  test_income_analysis_api.py  test_streaming_pipeline.py  test_trend_tool.py
backend/tests/unit/: test_budget_analyzer.py  test_data_tools.py  test_dataloader.py  test_dataloader_class.py  test_dataloader_unit.py  test_financial_tools.py  test_financial_tools_more.py  test_fire_calculator.py  test_fire_snapshot_csv.py  test_fire_snapshot_service.py  test_image_streamer_async.py  test_image_streamer_sync.py  test_loader_cache_stats.py  test_resources.py  test_streaming.py  test_trend_statistics.py  test_trend_tool.py
backend/tests/unit/analysis/: test_enhanced_fire_simulator.py  test_enhanced_fire_simulator_smoke.py  test_financial_independence.py  test_income_analyzer.py  test_income_caching.py  test_real_estate_cashflow_analyzer.py  test_savings_rate_calculator.py
backend/tests/unit/assets/: test_aggregation.py  test_export.py  test_manager.py
backend/tests/unit/database/: test_asset_tables.py  test_csv_importer.py  test_database_manager.py  test_query_helpers.py
backend/tests/unit/duplicate/: test_detector.py  test_service.py  test_tools.py
backend/tests/unit/tools/: test_category_analysis.py
backend/tests/unit/utils/: test_formatters.py
changelog.d/: 20250706_031326_44f233a7.feature.md  20250706_035521_9939b895.doc.md  20250706_035633_5030d1da.misc.md  auto_doc_lint_style_refactor.md
docs/: FAQ.md  api.md  deployment.md  duplicate_detection.md  examples.md  phase13_database_guide.md  usage.md
fonts/: README.md
frontend/: .eslintrc.json  .gitignore  Dockerfile  README.md  assets.html  duplicates.html  fi-dashboard.html  index.html  mcp-tools.html  nginx.conf  package-lock.json  package.json
issues/: refactor-create-http-app.md
nginx/: nginx.conf
scripts/: benchmark_performance.py  debug_detector.py  install_cjk_fonts.sh  integration_test.sh  start-dev.sh  start-prod.sh  stop.sh  test_csv_import.py
src/: __init__.py  server.py
tests/: conftest.py  conftest_local.py  test_account.py  test_budget.py  test_category.py  test_metric.py  (+2 more)
(+93 files in other folders)
