[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "household-mcp-server"
version = "0.1.0"
description = "MCP Server for household budget analysis with natural language interface"
authors = [{ name = "Project Team", email = "team@example.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["mcp", "household", "budget", "analysis", "ai", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Minimum runtime set required for current functionality (CSV loading, analysis, MCP exposure)
    "pandas>=2.1.4",
    "numpy>=1.26.0",
    "mcp[cli]>=1.13.1",
    "fastmcp>=0.4.0",
    "sqlalchemy>=2.0.23", # Database ORM for duplicate detection
]

[project.optional-dependencies]
# Kept as optionals to avoid forcing heavy/unnecessary installs for the current CLI/MCP use-case.
web = [
    "fastapi==0.116.1",
    "uvicorn>=0.34,<0.36",
    "pydantic>=2.11,<3",
    "python-multipart>=0.0.6",
]
viz = ["matplotlib>=3.8.0", "plotly>=5.17.0", "pillow>=10.0.0"]
db = ["sqlalchemy>=2.0.23", "alembic>=1.12.1"]
auth = ["passlib[bcrypt]>=1.7.4", "python-jose[cryptography]>=3.3.0"]
io = ["aiofiles>=23.2.1", "httpx>=0.25.2"]
logging = ["structlog>=23.2.0"]
# 新機能用の依存関係 (vizのエイリアス)
visualization = ["matplotlib>=3.8.0", "plotly>=5.17.0", "pillow>=10.0.0"]
streaming = ["fastapi>=0.100.0", "uvicorn>=0.23.0", "cachetools>=5.3.0"]
full = [
    "matplotlib>=3.8.0",
    "pillow>=10.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "cachetools>=5.3.0",
]

[project.urls]
Homepage = "https://github.com/raoshun/my_household_mcpserver"
Documentation = "https://github.com/raoshun/my_household_mcpserver/docs"
Repository = "https://github.com/raoshun/my_household_mcpserver"
"Bug Tracker" = "https://github.com/raoshun/my_household_mcpserver/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
household_mcp = ["py.typed"]

# Black設定
[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # 標準的な除外パターン
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# isort設定
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["household_mcp"]
known_third_party = [
    "fastapi",
    "pydantic",
    "pandas",
    "numpy",
    "matplotlib",
    "plotly",
    "sqlalchemy",
    "alembic",
]

# mypy設定
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true
exclude = ["src/server.py", "src/household_mcp/duplicate/detector.py"]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

# pytest設定
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src/household_mcp",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=80",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    # Suppress 3rd-party deprecation warning from dateutil used by pandas
    'ignore:datetime\.datetime\.utcfromtimestamp\(\) is deprecated:DeprecationWarning',
]

# Coverage設定
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.*",
    "src/household_mcp/database/*",
    "src/household_mcp/server.py",
    "src/household_mcp/visualization/*",
    # Temporarily omit heavy utility/tool modules until dedicated tests are added
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# Bandit設定
[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101", "B601"]

# Commitizen設定
[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
    "src/household_mcp/__init__.py:__version__",
]
bump_message = "bump: version $current_version → $new_version"
update_changelog_on_bump = true

[dependency-groups]
dev = [
    # Testing
    "pytest>=8.4.1",
    "pytest-cov>=4.1.0",
    # Linting & Formatting
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "bandit[toml]>=1.7.5",
    # Pre-commit hooks
    "pre-commit>=3.6.0",
]
