[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "household-mcp-server"
version = "0.1.0"
description = "MCP Server for household budget analysis with natural language interface"
authors = [{ name = "Project Team", email = "team@example.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["mcp", "household", "budget", "analysis", "ai", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Minimum runtime set required for current functionality (CSV loading, analysis, MCP exposure)
    "pandas>=2.1.4",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "mcp[cli]>=1.13.1",
    "fastmcp>=0.4.0",
]

[project.optional-dependencies]
# Optional dependency groups for additional functionality
# 基本: ローカルデータ読み込み・MCP リソース/ツール提供（依存なし）
# 以下は必要に応じてインストール

# 画像生成機能
visualization = ["matplotlib>=3.8.0", "plotly>=5.17.0", "pillow>=10.0.0"]

# HTTPストリーミング（画像配信用）
streaming = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "cachetools>=5.3.0",
]

# Web API（FastAPI ベース REST API）
web = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.11,<3",
    "python-multipart>=0.0.6",
]

# データベース連携（将来の拡張向け）
db = ["sqlalchemy>=2.0.23", "alembic>=1.12.1"]

# 認証機能
auth = ["passlib[bcrypt]>=1.7.4", "python-jose[cryptography]>=3.3.0"]

# 非同期 I/O
io = ["aiofiles>=23.2.1", "httpx>=0.25.2"]

# 構造化ログ
logging = ["structlog>=23.2.0"]

# E2E テスト
e2e = ["playwright>=1.40.0"]

# 完全インストール（すべてのオプション機能）
full = [
    "matplotlib>=3.8.0",
    "plotly>=5.17.0",
    "pillow>=10.0.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "cachetools>=5.3.0",
    "pydantic>=2.11,<3",
    "python-multipart>=0.0.6",
    "sqlalchemy>=2.0.23",
    "alembic>=1.12.1",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "aiofiles>=23.2.1",
    "httpx>=0.25.2",
    "structlog>=23.2.0",
    "playwright>=1.40.0",
]

[project.urls]
Homepage = "https://github.com/raoshun/my_household_mcpserver"
Documentation = "https://github.com/raoshun/my_household_mcpserver/docs"
Repository = "https://github.com/raoshun/my_household_mcpserver"
"Bug Tracker" = "https://github.com/raoshun/my_household_mcpserver/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
household_mcp = ["py.typed"]

# Black設定
[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # 標準的な除外パターン
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# isort設定
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["household_mcp"]
known_third_party = [
    "fastapi",
    "pydantic",
    "pandas",
    "numpy",
    "matplotlib",
    "plotly",
    "sqlalchemy",
    "alembic",
]

# mypy設定
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true
exclude = [
    "src/server.py",
    "src/household_mcp/duplicate/detector.py",
    "src/household_mcp/web/http_server.py",
    "src/household_mcp/server/.*",
    "src/household_mcp/streaming/.*",
    "src/household_mcp/database/.*",
]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

# Temporarily relax typing for legacy server wrapper and streaming/database modules
[[tool.mypy.overrides]]
module = "household_mcp.server.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "household_mcp.streaming.cache"
disable_error_code = ["import-untyped", "no-any-return"]

[[tool.mypy.overrides]]
module = "household_mcp.database.*"
disable_error_code = [
    "type-arg",
    "no-any-return",
    "attr-defined",
    "unused-ignore",
]

# pytest設定
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src/household_mcp",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    # TEMPORARY: Lower coverage threshold for stabilization (will raise gradually)
    "--cov-fail-under=56",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "asyncio: marks tests as asyncio tests",
    "anyio: marks tests as anyio tests",
]
filterwarnings = [
    # Suppress 3rd-party deprecation warning from dateutil used by pandas
    'ignore:datetime\.datetime\.utcfromtimestamp\(\) is deprecated:DeprecationWarning',
    # Suppress sqlite3 datetime adapter deprecation (Python 3.12+)
    'ignore:The default datetime adapter is deprecated:DeprecationWarning:',
    # Suppress Matplotlib Japanese font warnings (missing glyphs in DejaVu Sans)
    'ignore:Glyph .* missing from font\(s\) DejaVu Sans:UserWarning:matplotlib',
]

# Coverage設定
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.*",
    "src/household_mcp/database/*",
    "src/household_mcp/server.py",
    "src/household_mcp/visualization/*",
    # Omit optional extras modules from coverage in minimal installs
    "src/household_mcp/web/*",
    "src/household_mcp/duplicate/*",
    # Heavy tools relying on optional backends — covered in full matrix jobs
    "src/household_mcp/tools/duplicate_tools.py",
    "src/household_mcp/tools/enhanced_tools.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# Bandit設定
[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101", "B601"]

# Commitizen設定
[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
    "src/household_mcp/__init__.py:__version__",
]
bump_message = "bump: version $current_version → $new_version"
update_changelog_on_bump = true

[dependency-groups]
dev = [
    # Testing
    "pytest>=8.4.1",
    "pytest-cov>=4.1.0",
    # Linting & Formatting
    "ruff>=0.6.9",
    "black>=23.0.0",
    "bandit[toml]>=1.7.5",
    # Pre-commit hooks
    "pre-commit>=3.6.0",
    "pytest-timeout>=2.4.0",
]

# Ruff 設定（lint & format を Ruff に移行）
# Replaces: black, isort, flake8, mypy
[tool.ruff]
target-version = "py311"
line-length = 88
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "dist",
    "build",
    "*.egg-info",
    "tests",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle (PEP 8)
    "F",   # pyflakes
    "I",   # isort (import order)
    "W",   # pycodestyle warnings
    "C90", # mccabe (complexity)
    "D",   # pydocstyle (docstrings)
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "RUF", # Ruff-specific
]
ignore = [
    "E203",   # black 互換: slice notation whitespace
    "E501",   # 長行は許容（既存コード互換）
    "E402",   # モジュールインポート位置の柔軟性を許容
    "C901",   # 複雑度: maxが既に 10 に設定
    "D100",   # Missing docstring in public module
    "D101",   # Missing docstring in public class
    "D102",   # Missing docstring in public method
    "D103",   # Missing docstring in public function
    "D104",   # Missing docstring in public package
    "D105",   # Missing docstring in magic method
    "D107",   # Missing docstring in __init__
    "D202",   # No blank lines allowed after function docstring
    "D212",   # Multi-line docstring summary should start at first line
    "D301",   # Expected 1 blank line after class docstring
    "D400",   # First line should end with a period (docstring)
    "D401",   # First line should be imperative mood
    "D403",   # First word of the first line should be properly capitalized
    "D415",   # First line should end with a period
    "B904",   # Allow plain raise in except clauses (Python 3.11+ compatible)
    "RUF001", # String contains ambiguous character (Japanese chars are normal)
    "RUF002", # Docstring contains ambiguous character
    "RUF003", # Comment contains ambiguous character
    "RUF009", # Dataclass default with function call (acceptable pattern)
    "RUF012", # Mutable class attributes (ClassVar annotation not required here)
    "UP035",  # typing.List/Dict/etc deprecated (keep Python 3.11 compatibility)
    "UP007",  # Union type annotation (X | Y requires Python 3.10+)
    "UP028",  # Replace yield over for loop (existing style preference)
    # "UP038",  # REMOVED: This rule was removed in ruff v0.6+
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
# Tests: allow unused imports, missing docstrings, unused arguments
"tests/**/*" = ["F401", "F841", "D"]
"tests/*" = ["F401", "F841", "D"]
# Complex modules: allow higher complexity
"src/household_mcp/web/http_server.py" = ["C901"]
"src/household_mcp/duplicate/detector.py" = ["C901"]

[tool.ruff.lint.isort]
# Import sorting (isort replacement)
known-first-party = ["household_mcp"]

[tool.ruff.format]
# Format settings (black replacement)
quote-style = "double"
indent-style = "space"
line-ending = "auto"
